--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -41,7 +41,7 @@
           frameborder="0"
           src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&"></iframe>
         <div class="card-body">
-          <h5 class="card-title text-white fw-bold ">Laguna corrallina</h5>
+          <h5 class="card-title text-white fw-bold ">Laguna corallina</h5>
           <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e
             vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
           <a href="https://webobook.com/public/640856a645a63d6c531f5c72,enn" target="_blank"
