--- a/src/app/components/card-details/card-details.component.html
+++ b/src/app/components/card-details/card-details.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="d-flex align-items-center justify-content-center py-5">
-    <div class="card " style="max-width: 640px;">
+    <div class="card " style="max-width: 640px;" data-aos="zoom-in" data-aos-duration="2000">
       <img [src]="immagine">
       <div class="card-body px-4">
         <h5 class="card-title pt-2 fw-bold" id="title">Nome comune: {{nome_comune}}</h5>
