--- a/src/app/components/contatti/contatti.component.html
+++ b/src/app/components/contatti/contatti.component.html
@@ -2,7 +2,7 @@
 
 <div class=" text-center bg-dark hero pb-5">
   <h1 class="display-4 mb-5 py-3 text-white">Contatti</h1>
-  <div id="contact" class="container contact-area py-5 mb-5">
+  <div id="contact" class="container contact-area py-5 mb-5" data-aos="fade-up" data-aos-duration="2000">
     <div class="container ">
       <div class="section-title text-center">
       </div>
