--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="banner-image mt-5">
-  <div class="container pb-5">
+  <div class="container pb-5"  data-aos="fade-right" data-aos-duration="2000">
     <div class="row py-5 ">
       <div class="col-lg-6">
         <h1 class="display-4 mb-5 pt-5  text-white">Tour virtuale</h1>
@@ -16,8 +16,8 @@
 
 <div class=" text-center bg-dark hero pb-5 px-5 pt-5">
   <div class="row row-cols-1 row-cols-md-2 g-4 pb-5 justify-content-center gutter ">
-    <div class="col">
-      <div class="card pt-3">
+    <div class="col" >
+      <div class="card pt-3" data-aos="zoom-in" data-aos-duration="2000">
         <iframe id="evrFrame" width="100%" height="640"
           style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
           allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
@@ -33,8 +33,8 @@
       </div>
     </div>
 
-    <div class="col">
-      <div class="card pt-3">
+    <div class="col" >
+      <div class="card pt-3" data-aos="zoom-in" data-aos-duration="2000">
         <iframe id="evrFrame" width="100%" height="640"
           style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
           allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
@@ -51,7 +51,7 @@
     </div>
 
     <div class="col">
-      <div class="card pt-5">
+      <div class="card pt-5" data-aos="zoom-in" data-aos-duration="2000">
         <iframe id="evrFrame" width="100%" height="640"
           style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
           allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
@@ -68,7 +68,7 @@
     </div>
 
     <div class="col">
-      <div class="card pt-5">
+      <div class="card pt-5" data-aos="zoom-in" data-aos-duration="2000">
         <iframe id="evrFrame" width="100%" height="640"
           style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
           allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
@@ -85,7 +85,7 @@
     </div>
 
     <div class="col">
-      <div class="card pt-5">
+      <div class="card pt-5" data-aos="zoom-in" data-aos-duration="2000">
         <iframe id="evrFrame" width="100%" height="640"
           style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
           allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
@@ -102,7 +102,7 @@
     </div>
 
     <div class="col">
-      <div class="card pt-5">
+      <div class="card pt-5" data-aos="zoom-in" data-aos-duration="2000">
         <iframe id="evrFrame" width="100%" height="640"
           style="width: 100%; height: 640px; border: none; max-width: 100%;" allowvr="yes"
           allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"
