final commit extra functions

--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="banner-image mt-5">
   <div class="container pb-5">"
-    <div class="row py-5 align-items-center"  data-aos="fade-right" data-aos-duration="2500">
+    <div class="row py-5 align-items-center" data-aos="fade-right" data-aos-duration="2500">
       <div class="col-lg-6">
         <h1 class="display-4 mb-5 pt-5  text-white">Festeggiamo insieme 30 anni di Acquario</h1>
         <p class="h5 aa mb-5  text-white">
@@ -17,16 +17,13 @@
           <a href="" class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo"
             routerLink="/tour">Tuffati</a>
         </div>
-        <div class="d-flex" *ngIf="isLoggedIn">
-
-        </div>
       </div>
 
     </div>
   </div>
 </div>
 
-<div class="container-fluid descr" >
+<div class="container-fluid descr">
   <div class="px-4 pt-5  text-center pb-5" data-aos="fade-up" data-aos-duration="3000">
     <h3 class="display-6 fw-bold text-white py-3">Il più grande Acquario d'Europa</h3>
     <div class="col-lg-6 mx-auto">
@@ -67,6 +64,10 @@
 <div class="container-fluid  pt-4  squalo">
   <h3 class="display-6 fw-bold text-white  text-center w-75 m-auto pb-5 ">Vieni a scoprire l’Acquario di Genova e
     immergiti in un mondo di emozioni.</h3>
+  <div class="text-center" data-aos="zoom-in" data-aos-duration="2000">
+    <a href="" class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold acquista"
+      routerLink="/cart">Acquista biglietti</a>
+  </div>
   <div class="row flex-lg align-items-center g-5 pt-5 ps-5 ">
     <div class="col-10 col-sm-8 col-lg-6 descriptionsqualo" data-aos="fade-right" data-aos-duration="2500">
       <p class=" text-white pt-5 pb-3 fw-bold h4 pt-5 ">La baia degli squali</p>
@@ -127,7 +128,7 @@
   </div>
 </div>
 
-<div class="px-4 py-5  text-center visit" >
+<div class="px-4 py-5  text-center visit">
   <h3 class="display-6 fw-bold text-white py-3 pt-5">Acquario di Genova.<br>
     Vieni a scoprire un oceano <br>di sorprese.</h3>
   <div class="col-lg-6 mx-auto">
