--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -23,6 +23,16 @@ h1 {
   border-color: rgb(196, 53, 1);
 }
 
+.acquista{
+  background-color: orangered;
+  border-color: orangered;
+}
+
+.acquista:hover {
+  background-color: rgb(196, 53, 1);
+  border-color: rgb(196, 53, 1);
+}
+
 p {
   line-height: 35px;
 }
