--- a/src/app/components/navbar/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar/navbar.component.scss
@@ -61,6 +61,20 @@ img {
   background: none !important;
 }
 
+.bi{
+  font-size: 25px;
+
+}
+
+.cart{
+  background-color: transparent!important;
+  border: transparent!important;
+}
+
+.badge{
+  top: 25px!important;
+}
+
 .btn-close {
   --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff4500'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   --bs-btn-close-opacity: none !important;
@@ -70,7 +84,7 @@ img {
 @media screen and (max-width: 767px) {
 
   .offcanvas-end {
-    background-color: rgba(26, 26, 26, 0.849) !important;
+    background-color: rgba(0, 5, 11, 0.849) !important;
     backdrop-filter: blur(5px);
   }
 
